Fixed everything. Only remove API before making public + added compass

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <permission
         android:name="com.pkg.map.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"></permission>
+        android:protectionLevel="signature" />
 
     <application
         android:allowBackup="true"
@@ -24,9 +24,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".weatherSection"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".CompassActivity"></activity>
+        <activity android:name=".weatherSection" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -49,8 +50,7 @@
             android:name=".GPSActivity"
             android:label="@string/title_activity_gps"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".MainMenu" />
+        <activity android:name=".MainMenu" />
         <activity
             android:name=".RegisterActivity"
             android:noHistory="true" />
